--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "profile-ligita",
   "version": "0.1.0",
   "private": true,
+  "homepage": "http://legyta.github.io/profile",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
@@ -13,6 +14,8 @@
     "react-scripts": "3.4.1"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -34,6 +37,7 @@
     ]
   },
   "devDependencies": {
+    "gh-pages": "^2.2.0",
     "react-social-icons": "^4.1.0"
   }
 }
