--- a/package.json
+++ b/package.json
@@ -38,6 +38,8 @@
   },
   "devDependencies": {
     "gh-pages": "^2.2.0",
-    "react-social-icons": "^4.1.0"
+    "gulp-sass": "^4.1.0",
+    "react-social-icons": "^4.1.0",
+    "sass": "^1.30.0"
   }
 }
