--- a/package.json
+++ b/package.json
@@ -7,7 +7,6 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
-    "node-sass": "^4.14.0",
     "react": "^16.13.1",
     "react-bootstrap": "^1.0.1",
     "react-dom": "^16.13.1",
@@ -38,8 +37,6 @@
   },
   "devDependencies": {
     "gh-pages": "^2.2.0",
-    "gulp-sass": "^4.1.0",
-    "react-social-icons": "^4.1.0",
-    "sass": "^1.30.0"
+    "react-social-icons": "^4.1.0"
   }
 }
