--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "profile-ligita",
+  "name": "profile",
   "version": "0.1.0",
   "private": true,
   "homepage": "https://legyta.github.io/",
