--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
   },
   "devDependencies": {
     "gh-pages": "^5.0.0",
-    "react-social-icons": "^4.1.0"
+    "react-social-icons": "^4.1.0",
+    "@babel/plugin-proposal-private-property-in-object": "^7.0.0"
   }
 }
